# alchemia-ingestvm

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  seed.yaml  taste.yaml
.github/workflows/: ci.yml
agents/: com.alchemia.screenshot-watcher.plist
data/creative-briefs/: creative-brief-meta.md  creative-brief-organ_i.md  creative-brief-organ_ii.md  creative-brief-organ_iii.md  creative-brief-organ_iv.md  creative-brief-organ_v.md  creative-brief-organ_vi.md  creative-brief-organ_vii.md  workflow-integration-example.yml
data/organ-aesthetics/: organ-meta.yaml
docs/pitch/: index.html
intake/ai-transcripts/: 2025-05-meta-laws-of-reality-codex.json  2025-11-github-business-playbook.json  2025-12-ai-research-diverse-secondary.json  2025-12-architectural-synthesis-multi-agent.json  2025-12-debiasing-evaluation-process.json  2025-12-lifecycle-of-knowledge.json  2025-12-plato-idealism-aristotle-empiricism.json  2025-12-ulti-meta-manifesto.json  2026-01-assembling-disparate-units.json  2026-03-07-ai-conductor-shipping-guide.json  2026-03-07-ai-interaction-documentation-guide.json  2026-03-07-ai-to-ai-handoff-protocols.json  2026-03-07-ai-tools-research-automation.json  2026-03-07-bootstrap-to-scale-bloom.json  2026-03-07-bulletproof-creative-system-architecture.json  2026-03-07-compiling-analyzing-chat-threads.json  2026-03-07-creative-leadership-framework.json  2026-03-07-era-of-the-orchestrator.json  2026-03-07-meta-system-documentation-portfolio.json  2026-03-07-metaphysics-of-flux.json  (+18 more)
scripts/: install-agents.sh  screenshot-watcher.sh
src/alchemia/: __init__.py  (+4 more)
tests/: test_absorb.py  test_aesthetic.py  test_ai_chats.py  test_apple_notes.py  test_batch_deployer.py  test_bookmarks.py  test_classifier.py  test_cli_review.py  test_crawler.py  test_deployer.py  test_google_docs.py  test_intake.py  test_manifest_loader.py  test_name_variants.py  test_provenance.py  test_registry_loader.py  test_synthesize.py  test_transformer.py
(+14 files in other folders)
