[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemia"
version = "0.1.0"
description = "The Alchemical Forge — Material ingestion pipeline + aesthetic nervous system"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "4444j99"}]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
]

[project.scripts]
alchemia = "alchemia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PTH", "RET", "SIM", "COM", "PL"]
ignore = [
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLC0415",
    "PLR2004",
    "PLW1510",
    "PLW2901",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Google SDK is an optional dependency — suppress import errors for it
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
